--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </a>
 
     <!-- Solar Powered Blinds Operator THIRD -->
-    <a href="blinds.html">
+    <a href="solar_blinds.html">
       <div class="card">
         <img src="images/final_design_board.jpg" alt="Solar Powered Blinds Operator">
         <div class="card-title">Solar Powered Blinds Operator</div>
