--- a/solar_blinds.html
+++ b/solar_blinds.html
@@ -85,24 +85,27 @@
   </div>
 
 <h3>Final Design</h3>
-<p>A 3D printed casing was designed to neatly house the Arduino, IR receiver, and supporting circuitry. Additionally, a custom servo attachment was created to securely connect the servomotor to the blinds, ensuring smooth and consistent operation.</p>
+<p>
+  A 3D printed casing was designed to neatly house the Arduino, IR receiver, and supporting circuitry. 
+  Additionally, a custom servo attachment was created to securely connect the servomotor to the blinds, ensuring smooth and consistent operation.
+</p>
 
-<div style="display: flex; justify-content: space-between; gap: 20px; margin-top: 20px;">
-  <div style="flex: 1;">
-    <img src="images/final_design_board.jpg" alt="Blinds Circuit" style="width: 100%; height: auto; border-radius: 4px;">
-    <div style="text-align: center; font-style: italic; font-size: 0.9em;">Figure 2. The Final Design for the Blinds Operator</div>
-  </div>
-  <div style="flex: 1;">
-    <img src="images/final_design_solar.jpg" alt="Solar Panel" style="width: 100%; height: auto; border-radius: 4px;">
-  </div>
+<div style="display: flex; gap: 20px; justify-content: center;">
+  <img src="images/solar_blinds_final1.jpg" alt="Circuit" style="height: 300px; width: auto; border-radius: 4px;" />
+  <img src="images/solar_blinds_final2.jpg" alt="Solar Panel" style="height: 300px; width: auto; border-radius: 4px;" />
+</div>
+<div style="text-align: center; font-style: italic; margin-top: 8px;">
+  Figure 2. The Final Design for the Blinds Operator
 </div>
 
+<div style="text-align: center; margin-top: 20px;">
+  <video controls style="max-width: 480px; height: auto; border-radius: 8px;">
+    <source src="videos/blinds_demo.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <div style="font-style: italic; margin-top: 6px;">Video 1. Demonstration of the Blinds Operator</div>
+</div>
 
-<video class="image-full" controls>
-  <source src="videos/blinds_demo.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
-<div class="caption">Video 1. Demonstration of the Blinds Operator</div>
   
 </body>
 </html>
