--- a/index.html
+++ b/index.html
@@ -111,31 +111,55 @@
     </div>
   </div>
 
-  <div class="grid">
-    <!-- Underwater Camera System FIRST -->
-    <a href="camera.html">
-      <div class="card">
-        <img src="images/camera.jpg" alt="360 Underwater Camera System">
-        <div class="card-title">360 Underwater Camera System</div>
-      </div>
-    </a>
+<div class="grid">
+  <!-- Underwater Camera System -->
+  <a href="camera.html">
+    <div class="card">
+      <img src="images/camera.jpg" alt="360 Underwater Camera System">
+      <div class="card-title">360 Underwater Camera System</div>
+    </div>
+  </a>
 
-    <!-- Mechatronics Soccer Game SECOND -->
-    <a href="soccer.html">
-      <div class="card">
-        <img src="images/final_design_frame.jpg" alt="Mechatronics Soccer Game">
-        <div class="card-title">Mechatronics Soccer Game</div>
-      </div>
-    </a>
+  <!-- Mechatronics Soccer Game -->
+  <a href="soccer.html">
+    <div class="card">
+      <img src="images/soccer_thumbnail.jpg" alt="Mechatronics Soccer Game">
+      <div class="card-title">Mechatronics Soccer Game</div>
+    </div>
+  </a>
 
-    <!-- Solar Powered Blinds Operator THIRD -->
-    <a href="solar_blinds.html">
-      <div class="card">
-        <img src="images/final_design_board.jpg" alt="Solar Powered Blinds Operator">
-        <div class="card-title">Solar Powered Blinds Operator</div>
-      </div>
-    </a>
-  </div>
+  <!-- Solar Powered Blinds Operator -->
+  <a href="solar_blinds.html">
+    <div class="card">
+      <img src="images/solar_blinds_thumbnail.jpg" alt="Solar Powered Blinds Operator">
+      <div class="card-title">Solar Powered Blinds Operator</div>
+    </div>
+  </a>
+
+  <!-- Manufacturing and Heat Transfer -->
+  <a href="manufacturing_heat.html">
+    <div class="card">
+      <img src="images/manufacturing_thumbnail.jpg" alt="Manufacturing and Heat Transfer">
+      <div class="card-title">Manufacturing and Heat Transfer Projects</div>
+    </div>
+  </a>
+
+  <!-- FEA and Card Bending Machine -->
+  <a href="fea_bending.html">
+    <div class="card">
+      <img src="images/fea_bending_thumbnail.jpg" alt="FEA and Card Bending Machine">
+      <div class="card-title">FEA and Card Bending Machine Design</div>
+    </div>
+  </a>
+
+  <!-- Crane Project -->
+  <a href="crane_project.html">
+    <div class="card">
+      <img src="images/crane_project_thumbnail.jpg" alt="Crane Project">
+      <div class="card-title">Mechanics Based Design - Crane Project</div>
+    </div>
+  </a>
+</div>
 
 </body>
 </html>
