--- a/manufacturing_heat.html
+++ b/manufacturing_heat.html
@@ -71,16 +71,24 @@
     <div class="caption">Figure 2. Isometric view of the Sterling Engine</div>
   </div>
 
-  <div class="project">
-    <h3>Project 2: Heat Exchanger Project</h3>
-    <h4 class="timeline">Project Timeline: August 2022 – December 2022</h4>
-    <p>Fabricated, tested, and evaluated the performance of a counterflow heat exchanger, incorporating a custom 3D-printed baffle to improve thermal transfer efficiency. The goal was to design a compact system capable of enhancing heat exchange between two water streams moving in opposite directions.</p>
+<div class="project">
+  <h3>Project 2: Heat Exchanger Project</h3>
+  <h4 class="timeline">Project Timeline: August 2022 – December 2022</h4>
+  <p>Fabricated, tested, and evaluated the performance of a counterflow heat exchanger, incorporating a custom 3D-printed baffle to improve thermal transfer efficiency. The goal was to design a compact system capable of enhancing heat exchange between two water streams moving in opposite directions.</p>
 
-    <h4>Components</h4>
-    <p><b>Main PVC Shell:</b> The main shell of the heat exchanger was constructed using a PVC pipe, cut to length using a bandsaw and finished with a deburring tool to smooth the inner and outer edges. Holes were drilled into the PVC body using a drill press to accommodate the inlet and outlet fittings. These holes were carefully measured and aligned to ensure leak-free connections and minimal flow disruption. Fittings were bonded in place using epoxy adhesive and reinforced to handle fluid pressure.</p>
+  <h4>Components</h4>
+  <p><b>Main PVC Shell:</b> The main shell of the heat exchanger was constructed using a PVC pipe, cut to length using a bandsaw and finished with a deburring tool to smooth the inner and outer edges. Holes were drilled into the PVC body using a drill press to accommodate the inlet and outlet fittings. These holes were carefully measured and aligned to ensure leak-free connections and minimal flow disruption. Fittings were bonded in place using epoxy adhesive and reinforced to handle fluid pressure.</p>
 
-    <p><b>Internal Copper Tubing:</b> The internal coil, responsible for carrying one of the working fluids, was made from copper tubing. The tube was bent into a tight helical coil using a manual tube bender to maximize surface area within the PVC shell. Care was taken to avoid kinking and to maintain consistent spacing between turns, ensuring optimal heat transfer and minimal pressure loss.</p>
+  <p><b>Internal Copper Tubing:</b> The internal coil, responsible for carrying one of the working fluids, was made from copper tubing. The tube was bent into a tight helical coil using a manual tube bender to maximize surface area within the PVC shell. Care was taken to avoid kinking and to maintain consistent spacing between turns, ensuring optimal heat transfer and minimal pressure loss.</p>
+
+  <p><b>3D Printed Baffle:</b> To direct fluid flow and promote turbulence, a custom baffle was designed in Fusion 360 and 3D printed using PLA filament. The baffle featured a vertical cylindrical geometry with a helical pattern of cutouts, designed to channel the shell-side fluid along a longer, swirling path, thereby increasing contact with the copper tubing. After printing, the baffle was cleaned and post-processed with light sanding to remove support artifacts and ensure it fit securely inside the PVC pipe.</p>
+
+  <!-- Side-by-side image container -->
+  <div style="display: flex; gap: 12px; justify-content: center; align-items: flex-start; margin-top: 20px;">
+    <img src="images/baffle.jpg" alt="Custom 3D Printed Baffle" style="height: 280px; object-fit: cover;">
+    <img src="images/assembly.jpg" alt="Components of the Heat Exchanger" style="height: 280px; object-fit: cover;">
   </div>
-
+  <div class="caption">Figure 3. Custom baffle on the left and different components on the right</div>
+</div>
 </body>
 </html>
