--- a/manufacturing_heat.html
+++ b/manufacturing_heat.html
@@ -3,29 +3,58 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Projects – Manufacturing & Heat Transfer</title>
+  <title>Manufacturing & Heat Transfer Projects</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 40px auto;
-      max-width: 800px;
+      max-width: 1000px;
       line-height: 1.6;
       color: #222;
     }
-    h3 {
-      margin-top: 40px;
-      color: #111;
+    h1, h2, h3, h4 {
+      color: #222;
     }
-    h4.timeline {
+    h2 {
       color: #1f64b1;
-      margin-bottom: 20px;
+      margin-bottom: 24px;
     }
     .caption {
       font-style: italic;
       text-align: center;
-      font-size: 0.92em;
-      margin-top: 4px;
-      margin-bottom: 24px;
+      margin-top: 8px;
+      font-size: 0.95em;
+    }
+    .back-link {
+      font-size: 1em;
+      margin-bottom: 20px;
+      display: inline-block;
+      text-decoration: none;
+      background: #eee;
+      padding: 6px 12px;
+      border-radius: 5px;
+      color: #333;
+    }
+    .back-link:hover {
+      background: #ddd;
+    }
+    .wrap-container {
+      display: flex;
+      gap: 20px;
+      align-items: flex-start;
+      flex-wrap: wrap;
+    }
+    .wrap-image {
+      flex: 1 1 45%;
+      max-width: 400px;
+    }
+    .wrap-image img {
+      width: 100%;
+      height: auto;
+      border: 1px solid #ccc;
+    }
+    .wrap-text {
+      flex: 1 1 50%;
     }
     img {
       width: 100%;
@@ -34,61 +63,59 @@
       display: block;
       margin: 0 auto;
     }
-    a.top-link {
-      font-size: 14px;
-      margin-bottom: 20px;
-      display: inline-block;
-      text-decoration: none;
-      color: #1f64b1;
+    .side-by-side {
+      display: flex;
+      gap: 12px;
+      justify-content: center;
+      align-items: flex-start;
+      margin-top: 20px;
+      flex-wrap: wrap;
     }
-    .project {
-      margin-bottom: 60px;
+    .side-by-side img {
+      height: 350px;
+      object-fit: cover;
+      flex: 1 1 45%;
     }
   </style>
 </head>
 <body>
-
-  <a href="index.html" class="top-link">← Projects</a>
-
-  <div class="project">
-    <h3>Project 1: Manufacturing – Sterling Engine</h3>
-    <h4 class="timeline">Project Timeline: January 2022 – May 2022</h4>
-    <p>Designed and fabricated a fully functional Stirling engine to demonstrate principles of thermodynamics and mechanical motion. The project emphasized precision design using CAD, application of Geometric Dimensioning and Tolerancing (GD&T), and hands-on manufacturing using a variety of machining methods.</p>
-
-    <h4>Components</h4>
-    <p><b>Flywheel (precision-machined aluminum disk):</b> The flywheel, made from aluminum, was machined on a lathe starting with rough turning and facing operations to define the profile. A boring operation was then used to create a precise center hole for press-fitting onto the crankshaft. The outer edge was chamfered and deburred, and the flywheel was carefully balanced to ensure smooth rotation during engine operation.</p>
-
-    <p><b>Crank Arm and Linkages:</b> The crank arm and linkage components, cut from brass, were first rough-shaped and then milled to final dimensions using vertical and horizontal milling operations. Hole features were drilled with a precision drill press, and some reamed to achieve the required fit tolerance. Manual filing and deburring ensured clean edges and smooth articulation during rotation.</p>
-
-    <p><b>Power Piston and Displacer Cylinder:</b> These components were turned on the lathe from aluminum and steel stock, requiring tight roundness and fine surface finish through polishing or lapping to reduce leakage and friction.</p>
-
-    <p><b>Base Plate and Support Brackets:</b> Fabricated from sheet metal using a shear and press brake. CNC or drill press used for accurate hole positioning, ensuring alignment for the moving assembly.</p>
-
-    <img src="images/sterling_front.jpg" alt="Front view of Sterling Engine">
-    <div class="caption">Figure 1. Front view of the Sterling Engine</div>
-
-    <img src="images/sterling_iso.jpg" alt="Isometric view of Sterling Engine">
-    <div class="caption">Figure 2. Isometric view of the Sterling Engine</div>
+  <div style="position: fixed; top: 20px; left: 20px; z-index: 1000;">
+    <a href="index.html" style="text-decoration: none; font-weight: bold; font-size: 16px; color: #1f64b1;">← Projects</a>
   </div>
 
-<div class="project">
-  <h3>Project 2: Heat Exchanger Project</h3>
-  <h4 class="timeline">Project Timeline: August 2022 – December 2022</h4>
-  <p>Fabricated, tested, and evaluated the performance of a counterflow heat exchanger, incorporating a custom 3D-printed baffle to improve thermal transfer efficiency. The goal was to design a compact system capable of enhancing heat exchange between two water streams moving in opposite directions.</p>
+  <h1>Manufacturing & Heat Transfer Projects</h1>
+
+  <h3>Project 1: Manufacturing – Stirling Engine</h3>
+  <h2>Project Timeline: January 2022 – May 2022</h2>
+
+  <p>Designed and fabricated a fully functional Stirling engine to demonstrate principles of thermodynamics and mechanical motion. The project emphasized precision design using CAD, application of Geometric Dimensioning and Tolerancing (GD&T), and hands-on manufacturing using a variety of machining methods.</p>
 
   <h4>Components</h4>
-  <p><b>Main PVC Shell:</b> The main shell of the heat exchanger was constructed using a PVC pipe, cut to length using a bandsaw and finished with a deburring tool to smooth the inner and outer edges. Holes were drilled into the PVC body using a drill press to accommodate the inlet and outlet fittings. These holes were carefully measured and aligned to ensure leak-free connections and minimal flow disruption. Fittings were bonded in place using epoxy adhesive and reinforced to handle fluid pressure.</p>
+  <p><b>Flywheel:</b> Precision-machined aluminum disk turned on a lathe, then chamfered and balanced to ensure smooth engine operation.</p>
+  <p><b>Crank Arm & Linkages:</b> Brass components milled to spec, drilled and reamed for fits, and deburred for smooth mechanical articulation.</p>
+  <p><b>Power Piston & Cylinder:</b> Turned from aluminum and steel with polished surfaces to minimize leakage and friction.</p>
+  <p><b>Base Plate & Brackets:</b> Fabricated using shearing and press brake operations. Holes were CNC drilled for accurate alignment.</p>
 
-  <p><b>Internal Copper Tubing:</b> The internal coil, responsible for carrying one of the working fluids, was made from copper tubing. The tube was bent into a tight helical coil using a manual tube bender to maximize surface area within the PVC shell. Care was taken to avoid kinking and to maintain consistent spacing between turns, ensuring optimal heat transfer and minimal pressure loss.</p>
+  <img src="images/sterling_front.jpg" alt="Front view of Stirling Engine">
+  <div class="caption">Figure 1. Front view of the Stirling Engine</div>
 
-  <p><b>3D Printed Baffle:</b> To direct fluid flow and promote turbulence, a custom baffle was designed in Fusion 360 and 3D printed using PLA filament. The baffle featured a vertical cylindrical geometry with a helical pattern of cutouts, designed to channel the shell-side fluid along a longer, swirling path, thereby increasing contact with the copper tubing. After printing, the baffle was cleaned and post-processed with light sanding to remove support artifacts and ensure it fit securely inside the PVC pipe.</p>
+  <img src="images/sterling_iso.jpg" alt="Isometric view of Stirling Engine">
+  <div class="caption">Figure 2. Isometric view of the Stirling Engine</div>
 
-  <!-- Side-by-side image container -->
+  <h3>Project 2: Heat Exchanger</h3>
+  <h2>Project Timeline: August 2022 – December 2022</h2>
+
+  <p>Fabricated, tested, and evaluated the performance of a counterflow heat exchanger. A custom 3D printed baffle was incorporated to enhance thermal transfer efficiency and turbulence within the shell side.</p>
+
+  <h4>Components</h4>
+  <p><b>PVC Shell:</b> Bandsaw-cut and deburred. Precision-drilled inlet/outlet holes. Epoxy-sealed press-fit fittings ensured leak-free flow paths.</p>
+  <p><b>Internal Copper Coil:</b> Helically bent using a tube bender. Even spacing and no kinks to maintain pressure and maximize surface area.</p>
+  <p><b>3D Printed Baffle:</b> Designed in Fusion 360 with spiral cutouts, 3D printed with PLA, sanded to fit snugly inside the PVC pipe and induce turbulence.</p>
+
   <div style="display: flex; gap: 12px; justify-content: center; align-items: flex-start; margin-top: 20px;">
     <img src="images/baffle.jpg" alt="Custom 3D Printed Baffle" style="height: 450px; object-fit: cover;">
     <img src="images/assembly.jpg" alt="Components of the Heat Exchanger" style="height: 450px; object-fit: cover;">
   </div>
-  <div class="caption">Figure 3. Custom baffle on the left and different components on the right</div>
-</div>
+  <div class="caption">Figure 3. 3D printed baffle on the left and final heat exchanger assembly on the right</div>
 </body>
 </html>
