--- a/manufacturing_heat.html
+++ b/manufacturing_heat.html
@@ -109,11 +109,11 @@
   <p><b>3D Printed Baffle</b><br>
   To direct fluid flow and promote turbulence, a custom baffle was designed in Fusion 360 and 3D printed using PLA filament. The baffle featured a vertical cylindrical geometry with a helical pattern of cutouts, designed to channel the shell-side fluid along a longer, swirling path, thereby increasing contact with the copper tubing. After printing, the baffle was cleaned and post-processed with light sanding to remove support artifacts and ensure it fit securely inside the PVC pipe.</p>
 
-  <div class="side-by-side">
-    <img src="images/baffle.jpg" alt="Custom baffle 3D print">
-    <img src="images/assembly.jpg" alt="Heat exchanger components">
-  </div>
-  <div class="caption">Figure 3. Custom baffle on the left and different components on the right</div>
+<div style="display: flex; gap: 20px; justify-content: center; align-items: flex-start; margin-top: 20px;">
+  <img src="images/baffle.jpg" alt="Custom 3D Printed Baffle" style="height: 480px; object-fit: contain;">
+  <img src="images/assembly.jpg" alt="Components of the Heat Exchanger" style="height: 480px; object-fit: contain;">
+</div>
+<div class="caption">Figure 3. Custom baffle on the left and different components on the right</div>
 
 </body>
 </html>
