--- a/fea_bending.html
+++ b/fea_bending.html
@@ -85,16 +85,16 @@
   </ul>
 
   <h3>Design Sketch and CAD</h3>
-  <div class="wrap-container">
-    <div class="wrap-image">
-      <img src="images/creditcard_sketch.jpg" alt="Sketch of the machine">
-      <div class="caption">Figure 1. The sketch for the machine</div>
-    </div>
-    <div class="wrap-image">
-      <img src="images/creditcard_cad.jpg" alt="CAD of the machine">
-      <div class="caption">Figure 2. The CAD for the machine</div>
-    </div>
+<div class="wrap-container" style="gap: 20px; justify-content: space-between;">
+  <div class="wrap-image" style="flex: 1 1 48%;">
+    <img src="images/creditcard_sketch.jpg" alt="Sketch of the machine" style="width: 100%; height: auto;">
+    <div class="caption">Figure 1. The sketch for the machine</div>
   </div>
+  <div class="wrap-image" style="flex: 1 1 48%;">
+    <img src="images/creditcard_cad.jpg" alt="CAD of the machine" style="width: 100%; height: auto;">
+    <div class="caption">Figure 2. The CAD for the machine</div>
+  </div>
+</div>
 
   <h3>Calculations</h3>
   <h4>Defining the Variables</h4>
