--- a/fea_bending.html
+++ b/fea_bending.html
@@ -143,19 +143,19 @@
     <div class="caption">Figure 3.1 The credit card represented as a cantilever</div>
   </div>
 
-  <h3>Finite Element Analysis of Credit Card</h3>
-  <p>To evaluate bending performance, Finite Element Analysis (FEA) was conducted on both a traditional PVC credit card and a titanium metal card under identical loading conditions. The PVC card showed significant deformation with a maximum von Mises stress of approximately 190 MPa, concentrated near the fixed edge. In contrast, the titanium card exhibited far lower deflection and distributed stress due to its higher modulus of elasticity and yield strength, confirming its superior structural resilience.</p>
+<h3>Finite Element Analysis of Credit Card</h3>
+<p>To evaluate bending performance, Finite Element Analysis (FEA) was conducted on both a traditional PVC credit card and a titanium metal card under identical loading conditions. The PVC card showed significant deformation with a maximum von Mises stress of approximately 190 MPa, concentrated near the fixed edge. In contrast, the titanium card exhibited far lower deflection and distributed stress due to its higher modulus of elasticity and yield strength, confirming its superior structural resilience.</p>
 
-  <div class="wrap-container" style="margin-top: 24px;">
-    <div class="wrap-image">
-      <img src="images/fea_pvc.jpg" alt="FEA of traditional credit card">
-      <div class="caption">Figure 4. The FEA analysis of traditional credit card</div>
-    </div>
-    <div class="wrap-image">
-      <img src="images/fea_titanium.jpg" alt="FEA of titanium card">
-      <div class="caption">Figure 4. The FEA analysis of titanium credit card</div>
-    </div>
+<div class="wrap-container" style="flex-wrap: wrap; gap: 20px; justify-content: center;">
+  <div class="wrap-image" style="flex: 1 1 100%; max-width: 100%;">
+    <img src="images/fea_pvc.jpg" alt="FEA of traditional PVC credit card" style="width: 100%; height: auto;">
+    <div class="caption">Figure 4. The FEA analysis of traditional credit card</div>
   </div>
 
+  <div class="wrap-image" style="flex: 1 1 100%; max-width: 100%;">
+    <img src="images/fea_titanium.jpg" alt="FEA of titanium credit card" style="width: 100%; height: auto;">
+    <div class="caption">Figure 5. The FEA analysis of titanium credit card</div>
+  </div>
+</div>
 </body>
 </html>
