--- a/fea_bending.html
+++ b/fea_bending.html
@@ -51,7 +51,6 @@
     .wrap-image img {
       width: 100%;
       height: auto;
-      border: 1px solid #ccc;
     }
     .equation {
       background: #f7f7f7;
@@ -85,13 +84,13 @@
   </ul>
 
   <h3>Design Sketch and CAD</h3>
-<div class="wrap-container" style="gap: 20px; justify-content: space-between;">
-  <div class="wrap-image" style="flex: 1 1 48%;">
-    <img src="images/creditcard_sketch.jpg" alt="Sketch of the machine" style="width: 100%; height: auto;">
+<div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; align-items: flex-start; margin-top: 20px;">
+  <div style="flex: 1 1 45%; text-align: center;">
+    <img src="images/credit_sketch.jpg" alt="Sketch of the machine" style="width: 100%; max-height: 420px; object-fit: contain;">
     <div class="caption">Figure 1. The sketch for the machine</div>
   </div>
-  <div class="wrap-image" style="flex: 1 1 48%;">
-    <img src="images/creditcard_cad.jpg" alt="CAD of the machine" style="width: 100%; height: auto;">
+  <div style="flex: 1 1 45%; text-align: center;">
+    <img src="images/credit_cad.jpg" alt="CAD of the machine" style="width: 100%; max-height: 420px; object-fit: contain;">
     <div class="caption">Figure 2. The CAD for the machine</div>
   </div>
 </div>
