--- a/fea_bending.html
+++ b/fea_bending.html
@@ -87,11 +87,11 @@
 
 <div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; align-items: flex-start; margin-top: 20px;">
   <div style="flex: 1 1 45%; text-align: center;">
-    <img src="images/credit_sketch.jpg" alt="Sketch of the machine" style="height: 400px; width: auto; object-fit: contain;">
+    <img src="images/creditcard_cad.jpg" alt="Sketch of the machine" style="height: 400px; width: auto; object-fit: contain;">
     <div class="caption">Figure 1. The sketch for the machine</div>
   </div>
   <div style="flex: 1 1 45%; text-align: center;">
-    <img src="images/credit_cad.jpg" alt="CAD of the machine" style="height: 400px; width: auto; object-fit: contain;">
+    <img src="images/creditcard_sketch.jpg" alt="CAD of the machine" style="height: 400px; width: auto; object-fit: contain;">
     <div class="caption">Figure 2. The CAD for the machine</div>
   </div>
 </div>
