--- a/fea_bending.html
+++ b/fea_bending.html
@@ -85,15 +85,18 @@
 
   <h3>Design Sketch and CAD</h3>
 
-<div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; align-items: flex-start; margin-top: 20px;">
-  <div style="flex: 1 1 45%; text-align: center;">
-    <img src="images/creditcard_cad.jpg" alt="Sketch of the machine" style="height: 400px; width: auto; object-fit: contain;">
-    <div class="caption">Figure 1. The sketch for the machine</div>
-  </div>
-  <div style="flex: 1 1 45%; text-align: center;">
-    <img src="images/creditcard_sketch.jpg" alt="CAD of the machine" style="height: 400px; width: auto; object-fit: contain;">
-    <div class="caption">Figure 2. The CAD for the machine</div>
-  </div>
+<div style="display: flex; justify-content: center; align-items: flex-start; gap: 20px; flex-wrap: wrap;">
+
+  <figure style="flex: 1; max-width: 48%; text-align: center;">
+    <img src="images/sketch.png" style="width: 100%; height: auto; object-fit: contain;" alt="Sketch of machine">
+    <figcaption><em>Figure 1. The sketch for the machine</em></figcaption>
+  </figure>
+
+  <figure style="flex: 1; max-width: 48%; text-align: center;">
+    <img src="images/cad.png" style="width: 100%; height: auto; object-fit: contain;" alt="CAD of machine">
+    <figcaption><em>Figure 2. The CAD for the machine</em></figcaption>
+  </figure>
+
 </div>
 
 
