--- a/fea_bending.html
+++ b/fea_bending.html
@@ -88,12 +88,12 @@
 <div style="display: flex; justify-content: center; align-items: flex-start; gap: 20px; flex-wrap: wrap;">
 
   <figure style="flex: 1; max-width: 48%; text-align: center;">
-    <img src="images/sketch.png" style="width: 100%; height: auto; object-fit: contain;" alt="Sketch of machine">
+    <img src="images/creditcard_sketch.jpg" style="width: 100%; height: auto; object-fit: contain;" alt="Sketch of machine">
     <figcaption><em>Figure 1. The sketch for the machine</em></figcaption>
   </figure>
 
   <figure style="flex: 1; max-width: 48%; text-align: center;">
-    <img src="images/cad.png" style="width: 100%; height: auto; object-fit: contain;" alt="CAD of machine">
+    <img src="images/creditcard_cad.jpg" style="width: 100%; height: auto; object-fit: contain;" alt="CAD of machine">
     <figcaption><em>Figure 2. The CAD for the machine</em></figcaption>
   </figure>
 
