--- a/fea_bending.html
+++ b/fea_bending.html
@@ -85,20 +85,16 @@
 
   <h3>Design Sketch and CAD</h3>
 
-<div style="display: flex; justify-content: center; align-items: flex-start; gap: 20px; flex-wrap: wrap;">
-
-  <figure style="flex: 1; max-width: 48%; text-align: center;">
-    <img src="images/creditcard_sketch.jpg" style="width: 100%; height: auto; object-fit: contain;" alt="Sketch of machine">
-    <figcaption><em>Figure 1. The sketch for the machine</em></figcaption>
-  </figure>
-
-  <figure style="flex: 1; max-width: 48%; text-align: center;">
-    <img src="images/creditcard_cad.jpg" style="width: 100%; height: auto; object-fit: contain;" alt="CAD of machine">
-    <figcaption><em>Figure 2. The CAD for the machine</em></figcaption>
-  </figure>
-
+<div style="display: flex; justify-content: center; align-items: flex-start; gap: 30px; flex-wrap: wrap; margin-top: 20px;">
+  <div style="flex: 1 1 400px; max-width: 400px; text-align: center;">
+    <img src="images/credit_sketch.jpg" alt="Sketch of the machine" style="width: 100%; height: auto; object-fit: contain;">
+    <div style="margin-top: 10px; font-style: italic;">Figure 1. The sketch for the machine</div>
+  </div>
+  <div style="flex: 1 1 400px; max-width: 400px; text-align: center;">
+    <img src="images/credit_cad.jpg" alt="CAD of the machine" style="width: 100%; height: auto; object-fit: contain;">
+    <div style="margin-top: 10px; font-style: italic;">Figure 2. The CAD for the machine</div>
+  </div>
 </div>
-
 
   <h3>Calculations</h3>
   <h4>Defining the Variables</h4>
