--- a/fea_bending.html
+++ b/fea_bending.html
@@ -87,14 +87,15 @@
 
 <div style="display: flex; justify-content: center; align-items: flex-start; gap: 30px; flex-wrap: wrap; margin-top: 20px;">
   <div style="flex: 1 1 400px; max-width: 400px; text-align: center;">
-    <img src="images/creditcard_sketch.jpg" alt="Sketch of the machine" style="width: 100%; height: auto; object-fit: contain;">
+    <img src="images/credit_sketch.jpg" alt="Sketch of the machine" style="width: 100%; height: 400px; object-fit: cover;">
     <div style="margin-top: 10px; font-style: italic;">Figure 1. The sketch for the machine</div>
   </div>
   <div style="flex: 1 1 400px; max-width: 400px; text-align: center;">
-    <img src="images/creditcard_cad.jpg" alt="CAD of the machine" style="width: 100%; height: auto; object-fit: contain;">
+    <img src="images/credit_cad.jpg" alt="CAD of the machine" style="width: 100%; height: 400px; object-fit: cover;">
     <div style="margin-top: 10px; font-style: italic;">Figure 2. The CAD for the machine</div>
   </div>
 </div>
+
 
   <h3>Calculations</h3>
   <h4>Defining the Variables</h4>
