--- a/crane_project.html
+++ b/crane_project.html
@@ -1,42 +1,118 @@
-<section class="project">
-  <h2>Mechanics Based Design – Crane Project</h2>
-  <p><strong>Project Timeline:</strong> <span style="color:#0a66c2;">March 2022 – May 2022</span></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Crane Project – Mechanics Based Design</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px auto;
+      max-width: 1000px;
+      line-height: 1.6;
+      color: #222;
+    }
+    h1, h2, h3, h4 {
+      color: #222;
+      margin-bottom: 0.5em;
+    }
+    h2 {
+      color: #1f64b1;
+    }
+    .caption {
+      font-style: italic;
+      text-align: center;
+      font-size: 0.95em;
+      margin-top: 6px;
+      margin-bottom: 24px;
+    }
+    .back-link {
+      font-size: 1em;
+      margin-bottom: 20px;
+      display: inline-block;
+      text-decoration: none;
+      background: #eee;
+      padding: 6px 12px;
+      border-radius: 5px;
+      color: #333;
+    }
+    .back-link:hover {
+      background: #ddd;
+    }
+    img {
+      width: 100%;
+      max-height: 450px;
+      object-fit: contain;
+      display: block;
+      margin: 0 auto;
+    }
+    .side-by-side {
+      display: flex;
+      gap: 12px;
+      justify-content: center;
+      align-items: flex-start;
+      margin-top: 12px;
+      margin-bottom: 4px;
+      flex-wrap: wrap;
+    }
+    .side-by-side img {
+      height: 400px;
+      object-fit: cover;
+      flex: 1 1 45%;
+    }
+  </style>
+</head>
+<body>
 
-  <p>This project involved the complete design and fabrication of a mechanical crane capable of lifting a 10-pound load over a vertical distance of 5 feet using a carefully engineered gear train and pulley system. The system was fully modeled in CAD with the application of Geometric Dimensioning and Tolerancing (GD&T) to ensure precise fits, alignment, and efficient motion transfer.</p>
+  <h1>Mechanics Based Design – Crane Project</h1>
+  <p><strong>Project Timeline:</strong> <span style="color:#1f64b1;">March 2022 – May 2022</span></p>
+
+  <p>
+    This project involved the complete design and fabrication of a mechanical crane capable of lifting a 10-pound load over a vertical distance of 5 feet using a carefully engineered gear train and pulley system. The system was fully modeled in CAD with the application of Geometric Dimensioning and Tolerancing (GD&T) to ensure precise fits, alignment, and efficient motion transfer.
+  </p>
 
   <h3>Components</h3>
-  <ul style="columns: 2;">
-    <li>4x Laser-Cut Acrylic Gears</li>
-    <li>2x Wooden Dowels (gear axles)</li>
-    <li>1x Machined Beam Arm</li>
-    <li>1x Pulley Assembly with Rollers</li>
-    <li>Assorted Washers, Spacers</li>
-    <li>1x Mounting Base Plate</li>
-    <li>Nylon String (lifting cable)</li>
-    <li>Weights (10 lb total)</li>
-    <li>M5 Screws and Fasteners</li>
-  </ul>
-
-  <div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; align-items: flex-start; margin: 20px 0;">
-    <div style="flex: 1 1 45%; text-align: center;">
-      <img src="images/crane_image_1.jpg" alt="Crane top view" style="height: 300px; width: auto; object-fit: cover;">
-      <div class="caption">Figure 1. The gear assembly in the crane mechanism</div>
-    </div>
-    <div style="flex: 1 1 45%; text-align: center;">
-      <img src="images/crane_image_2.jpg" alt="Crane full assembly" style="height: 300px; width: auto; object-fit: cover;">
-      <div class="caption">Figure 2. The assembled crane during testing</div>
-    </div>
+  <div style="display: flex; justify-content: space-between; flex-wrap: wrap;">
+    <ul style="flex: 1 1 45%; margin: 0; padding-left: 20px;">
+      <li>4x Laser-Cut Acrylic Gears</li>
+      <li>2x Wooden Dowels (gear axles)</li>
+      <li>1x Machined Beam Arm</li>
+      <li>1x Pulley Assembly with Rollers</li>
+      <li>Assorted Washers, Spacers</li>
+    </ul>
+    <ul style="flex: 1 1 45%; margin: 0; padding-left: 20px;">
+      <li>1x Mounting Base Plate</li>
+      <li>Nylon String (lifting cable)</li>
+      <li>Weights (10 lb total)</li>
+      <li>M5 Screws and Fasteners</li>
+    </ul>
   </div>
 
+  <div class="side-by-side">
+    <img src="images/crane_gear_view.jpg" alt="Crane gear system view">
+    <img src="images/crane_full_view.jpg" alt="Crane full assembled view">
+  </div>
+  <p class="caption">Figure 1. The design of the completed crane</p>
+
   <h3>Laser-Cut Acrylic Gears</h3>
-  <p>The gears were fabricated from clear acrylic sheets, typically ranging from 3mm to 6mm in thickness. Gear profiles were first designed using CAD software and exported as DXF or SVG files suitable for laser processing. A CO₂ laser cutter was used to cut the precise outlines, enabling clean and accurate meshing. After cutting, the edges of the gears were lightly sanded or flame-polished to remove any burrs or sharp edges.</p>
+  <p>
+    The gears were fabricated from clear acrylic sheets, typically ranging from 3mm to 6mm in thickness. Gear profiles were first designed using CAD software and exported as DXF or SVG files suitable for laser processing. A CO<sub>2</sub> laser cutter was used to cut the precise outlines, enabling clean and accurate meshing. After cutting, the edges of the gears were lightly sanded or flame-polished to remove any burrs or sharp edges.
+  </p>
 
   <h3>Wooden Dowels (Gear Axles)</h3>
-  <p>The axles were created using hardwood or birch dowels, which offer both durability and low friction. The dowels were cut to the required lengths using a bandsaw or miter saw. Once cut, the ends were carefully sanded—either by hand or using a belt sander—to achieve smooth, splinter-free surfaces. In some cases, the ends were chamfered or turned on a lathe to improve alignment and fit with the gears and bushings.</p>
+  <p>
+    The axles were created using hardwood or birch dowels, which offer both durability and low friction. The dowels were cut to the required lengths using a bandsaw or miter saw. Once cut, the ends were carefully sanded—either by hand or using a belt sander—to achieve smooth, splinter-free surfaces. In some cases, the ends were chamfered or turned on a lathe to improve alignment and fit with the gears and bushings.
+  </p>
 
   <h3>Machined Beam Arm</h3>
-  <p>The beam arm, typically machined from aluminum or steel stock, was first cut to rough dimensions using a bandsaw or waterjet cutter. Precision features such as holes and slots were added using a vertical CNC mill or a manual milling machine. These operations ensured tight tolerances and reliable alignment of moving components. Following machining, all edges and corners were deburred and polished using fine sandpaper or a handheld deburring tool.</p>
+  <p>
+    The beam arm, typically made from aluminum or steel stock, was first cut to rough dimensions using a bandsaw or waterjet cutter. Precision features such as holes and slots were added using a vertical CNC mill or a manual milling machine. These operations ensured tight tolerances and reliable alignment of moving components. Following machining, all edges and corners were deburred and polished using fine sandpaper or a handheld deburring tool.
+  </p>
 
   <h3>Pulley Assembly with Rollers</h3>
-  <p>The pulley system was composed of multiple elements fabricated through a combination of machining and additive manufacturing. Pulleys were either machined from aluminum for strength or 3D printed using plastic for ease of prototyping. Holes for axles or bearings were drilled and reamed to allow for smooth, low-friction rotation. Rollers were turned on a lathe to ensure consistent diameter and finish.</p>
-</section>
+  <p>
+    The pulley system was composed of multiple elements fabricated through a combination of machining and additive manufacturing. Pulleys were either machined from aluminum for strength or 3D printed using plastic for ease of prototyping. Holes for axles or bearings were drilled and reamed to allow for smooth, low-friction rotation. Rollers were turned on a lathe to ensure consistent diameter and finish.
+  </p>
+
+</body>
+</html>
