--- a/crane_project.html
+++ b/crane_project.html
@@ -89,8 +89,8 @@
   </div>
 
   <div class="side-by-side">
-    <img src="images/crane_gear_view.jpg" alt="Crane gear system view">
-    <img src="images/crane_full_view.jpg" alt="Crane full assembled view">
+    <img src="images/crane_image_1.jpg" alt="Crane gear system view">
+    <img src="images/crane_image_2.jpg" alt="Crane full assembled view">
   </div>
   <p class="caption">Figure 1. The design of the completed crane</p>
 
