--- a/crane_project.html
+++ b/crane_project.html
@@ -13,11 +13,15 @@
       color: #222;
     }
     h1, h2, h3, h4 {
-      color: #222;
       margin-bottom: 0.5em;
     }
+    h1 {
+      font-size: 2em;
+      font-weight: bold;
+    }
     h2 {
-      color: #1f64b1;
+      font-size: 1.2em;
+      font-weight: bold;
     }
     .caption {
       font-style: italic;
@@ -64,14 +68,16 @@
 </head>
 <body>
 
+  <a href="index.html" class="back-link">← Projects</a>
+
   <h1>Mechanics Based Design – Crane Project</h1>
-  <p><strong>Project Timeline:</strong> <span style="color:#1f64b1;">March 2022 – May 2022</span></p>
+  <h2>Project Timeline: <span style="color:#1f64b1;">March 2022 – May 2022</span></h2>
 
   <p>
     This project involved the complete design and fabrication of a mechanical crane capable of lifting a 10-pound load over a vertical distance of 5 feet using a carefully engineered gear train and pulley system. The system was fully modeled in CAD with the application of Geometric Dimensioning and Tolerancing (GD&T) to ensure precise fits, alignment, and efficient motion transfer.
   </p>
 
-  <h3>Components</h3>
+  <h2>Components</h2>
   <div style="display: flex; justify-content: space-between; flex-wrap: wrap;">
     <ul style="flex: 1 1 45%; margin: 0; padding-left: 20px;">
       <li>4x Laser-Cut Acrylic Gears</li>
@@ -90,26 +96,26 @@
 
   <div class="side-by-side">
     <img src="images/crane_image_1.jpg" alt="Crane gear system view">
-    <img src="images/crane_image_2.jpg" alt="Crane full assembled view">
+    <img src="images/crane_image_2.jpg" alt="Crane fully assembled view">
   </div>
   <p class="caption">Figure 1. The design of the completed crane</p>
 
-  <h3>Laser-Cut Acrylic Gears</h3>
+  <h2>Laser-Cut Acrylic Gears</h2>
   <p>
     The gears were fabricated from clear acrylic sheets, typically ranging from 3mm to 6mm in thickness. Gear profiles were first designed using CAD software and exported as DXF or SVG files suitable for laser processing. A CO<sub>2</sub> laser cutter was used to cut the precise outlines, enabling clean and accurate meshing. After cutting, the edges of the gears were lightly sanded or flame-polished to remove any burrs or sharp edges.
   </p>
 
-  <h3>Wooden Dowels (Gear Axles)</h3>
+  <h2>Wooden Dowels (Gear Axles)</h2>
   <p>
     The axles were created using hardwood or birch dowels, which offer both durability and low friction. The dowels were cut to the required lengths using a bandsaw or miter saw. Once cut, the ends were carefully sanded—either by hand or using a belt sander—to achieve smooth, splinter-free surfaces. In some cases, the ends were chamfered or turned on a lathe to improve alignment and fit with the gears and bushings.
   </p>
 
-  <h3>Machined Beam Arm</h3>
+  <h2>Machined Beam Arm</h2>
   <p>
     The beam arm, typically made from aluminum or steel stock, was first cut to rough dimensions using a bandsaw or waterjet cutter. Precision features such as holes and slots were added using a vertical CNC mill or a manual milling machine. These operations ensured tight tolerances and reliable alignment of moving components. Following machining, all edges and corners were deburred and polished using fine sandpaper or a handheld deburring tool.
   </p>
 
-  <h3>Pulley Assembly with Rollers</h3>
+  <h2>Pulley Assembly with Rollers</h2>
   <p>
     The pulley system was composed of multiple elements fabricated through a combination of machining and additive manufacturing. Pulleys were either machined from aluminum for strength or 3D printed using plastic for ease of prototyping. Holes for axles or bearings were drilled and reamed to allow for smooth, low-friction rotation. Rollers were turned on a lathe to ensure consistent diameter and finish.
   </p>
