--- a/index.html
+++ b/index.html
@@ -99,7 +99,21 @@
   </style>
 </head>
 <body>
-
+<div style="display: flex; justify-content: flex-end; margin-bottom: 20px;">
+  <a href="resume.pdf" target="_blank" style="
+    display: inline-block;
+    padding: 10px 18px;
+    background-color: #1f64b1;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  ">
+    📄 View My Resume
+  </a>
+</div>
   <div class="header">
     <h1>Vedant Gabhawala</h1>
     <h2>MS in Mechanical Engineering at Stanford University</h2>
