--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </head>
 <body>
 <div style="display: flex; justify-content: flex-end; margin-bottom: 20px;">
-  <a href="resume.pdf" target="_blank" style="
+  <a href="Vedant Gabhawala Resume.pdf" target="_blank" style="
     display: inline-block;
     padding: 10px 18px;
     background-color: #1f64b1;
